k8s/scheduler.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scheduler
  namespace: atplcrm
spec:
  replicas: 1

  selector:
    matchLabels:
      app: scheduler

  template:
    metadata:
      labels:
        app: scheduler

    spec:
      containers:
        - name: scheduler
          image: yashuraj/atplcrm-scheduler:v1

          command:
            - celery
            - -A
            - atplcrm.tasks.celery_app
            - beat
            - --loglevel=info
            - --schedule=/tmp/celerybeat-schedule
