k8s/worker.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: atplcrm
spec:
  replicas: 1

  selector:
    matchLabels:
      app: worker

  template:
    metadata:
      labels:
        app: worker

    spec:
      containers:
        - name: worker
          image: yashuraj/atplcrm-worker:v1

          command:
            - celery
            - -A
            - atplcrm.tasks.celery_app
            - worker
            - --loglevel=info
            - --concurrency=2
