k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: atplcrm
spec:
  replicas: 2

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: yashuraj/atplcrm-api:v1

          ports:
            - containerPort: 8000

          volumeMounts:
            - name: artifacts
              mountPath: /data/artifacts

          readinessProbe:
            httpGet:
              path: /api/health/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20

      volumes:
        - name: artifacts
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: atplcrm
spec:
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
