k8s/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: atpl-crm
spec:
  replicas: 2

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
        - name: api
          image: atplcrmacr.azurecr.io/atplcrm-api:v1
          ports:
            - containerPort: 8000

          volumeMounts:
            - name: artifacts
              mountPath: /data/artifacts

            - name: secrets-store
              mountPath: /mnt/secrets-store
              readOnly: true

          readinessProbe:
            httpGet:
              path: /api/health/
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /api/health/
              port: 8000
            initialDelaySeconds: 30
            periodSeconds: 20

      volumes:
        - name: artifacts
          emptyDir: {}

        - name: secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: atplcrm-keyvault

---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: atpl-crm
spec:
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
  type: ClusterIP
