k8s/postgres.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: atplcrm
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        - name: postgres
          image: postgres:17-alpine

          ports:
            - containerPort: 5432

          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql

          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - atplcrm
                - -d
                - atplcrm
            initialDelaySeconds: 5
            periodSeconds: 5

      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: atplcrm
spec:
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
