k8s/web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: atplcrm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
    spec:
      containers:
        - name: web
          image: atplcrmacr.azurecr.io/atplcrm-web:v2
          ports:
            - containerPort: 8080

          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 6

          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 6

---
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: atplcrm
spec:
  selector:
    app: web
  ports:
    - port: 8000
      targetPort: 8080
  type: LoadBalancer
