k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: atplcrm
  namespace: atpl-crm
spec:
  ingressClassName: nginx

  rules:
    - host: atplcrm.local

      http:
        paths:
          - path: /
            pathType: Prefix

            backend:
              service:
                name: web
                port:
                  number: 8080
